export const snapshot = {};

snapshot[`nu / darwin / diff 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / diff 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / find (with filter) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find/git?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / find (with sysHost) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux&sysHost=testhost&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / diff 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;
